--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "eslint": "^7.1.0",
     "eslint-config-next": "11.1.2",
-    "next": "11.1.2",
+    "next": "^11.1.3",
     "postcss": "^8.3.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
