--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "eslint": "^7.1.0",
     "eslint-config-next": "11.1.2",
     "next": "^11.1.3",
+    "nextjs": "^0.0.3",
     "postcss": "^8.3.9",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "tailwindcss": "^2.2.17"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
@@ -24,6 +24,6 @@
     "eslint": "^7.1.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.9",
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^2.2.19"
   }
 }
